<?xml version="1.0"?>
<package format="3">
  <name>minecraft_ros2_example</name>
  <version>0.1.0</version>
  <description>The minecraft_ros2_example package</description>

  <maintainer email="ttttghghnb554z@outlook.jp">Taiga takano</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav2_bringup</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>